--- a/front/src/css/login.css
+++ b/front/src/css/login.css
@@ -11,6 +11,7 @@ font-family: 'Numans', sans-serif;
 }
 
 .container{
+padding-top: 10%;
 height: 100%;
 align-content: center;
 }
@@ -23,25 +24,8 @@ width: 400px;
 background-color: rgba(0,0,0,0.5) !important;
 }
 
-.social_icon span{
-font-size: 60px;
-margin-left: 10px;
-color: #FFC312;
-}
-
-.social_icon span:hover{
-color: white;
-cursor: pointer;
-}
-
 .card-header h3{
 color: white;
-}
-
-.social_icon{
-position: absolute;
-right: 20px;
-top: -45px;
 }
 
 .input-group-prepend span{
