--- a/src/css/whiteboard.css
+++ b/src/css/whiteboard.css
@@ -42,3 +42,17 @@
   .color.green { background-color: green; }
   .color.blue { background-color: blue; }
   .color.yellow { background-color: yellow; }
+
+  #upper {
+    background-color: black;
+    width:100%;
+    height:40px;
+  }
+
+  #upper button {
+    background-color: inherit;
+    margin-right: 5px;
+    border: none;
+    cursor: pointer;
+    color:white;
+  }
