--- a/src/css/whiteboard.css
+++ b/src/css/whiteboard.css
@@ -26,7 +26,6 @@
     bottom: 0;
     top: 0;
     border-style: solid;
-    padding-top: 10%;
   }
   
   .colors {
@@ -44,17 +43,28 @@
   .color.green { background-color: green; }
   .color.blue { background-color: blue; }
   .color.yellow { background-color: yellow; }
+  /* Place the navbar at the bottom of the page, and make it stick */
+.navbar {
+  background-color: #333;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
 
-  #upper {
-    background-color: black;
-    width:100%;
-    height:40px;
-  }
+/* Style the links inside the navigation bar */
+.navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
 
-  #upper button {
-    background-color: inherit;
-    margin-right: 5px;
-    border: none;
-    cursor: pointer;
-    color:white;
-  }
+/* Change the color of links on hover */
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
