--- a/src/css/user.css
+++ b/src/css/user.css
@@ -1,23 +1,29 @@
 .profilePicture{
     width: 320px;
     height: 320px;
+    margin:auto;
+    margin-top: 10%;
 }
 .profilePictureContainer, .userInfoContainer{
     border-style: solid grey;
     border-radius: 10px;
     height: auto;
 }
-.updateProfilePicture, .updateUserInfo{
-    width: 200px;
+.updateProfilePicture{
+    width: 400px;
     height: auto;
+    margin-left:90%;
+    margin-bottom: 3%;
+    
 }
 .userInfo{
+  margin-top:20%;
     font-size: 18px;
 
 }
-
 .userInformation{
-    border-style: solid black;
+  background: #888;
+    border-style: solid;
     border-radius: 25px;
 }
 
@@ -41,7 +47,7 @@
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 20%; /* Could be more or less, depending on screen size */
   }
   
   /* The Close Button */
