Canvas persists. Small issue with drawing not allowing anymore drawings

--- a/src/css/whiteboard.css
+++ b/src/css/whiteboard.css
@@ -36,6 +36,15 @@
     display: inline-block;
     height: 48px;
     width: 48px;
+    border-radius: 50%;
+  }
+
+  .eraser{
+    position:fixed;
+    display:inline-block;
+    height: 48px;
+    width: 48px;
+    border-radius: 50%;
   }
   
   .color.black { background-color: black; }
