--- a/src/css/login.css
+++ b/src/css/login.css
@@ -5,8 +5,7 @@
 html,body{
 /*background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');*/
 background-image: url('../img/seamless.png');
-background-size: cover;
-background-repeat: no-repeat;
+background-repeat: repeat;
 height: 100%;
 font-family: 'Numans', sans-serif;
 }
