--- a/src/css/whiteboard.css
+++ b/src/css/whiteboard.css
@@ -30,6 +30,8 @@
   
   .colors {
     position: fixed;
+    bottom:0;
+    left:10px;
   }
   
   .color {
@@ -52,32 +54,16 @@
   .color.green { background-color: green; }
   .color.blue { background-color: blue; }
   .color.yellow { background-color: yellow; }
-  /* Place the navbar at the bottom of the page, and make it stick */
-.navbar {
-  background-color: #333;
-  overflow: hidden;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
-/* Style the links inside the navigation bar */
-.navbar a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
+ 
 .label-container{
+	position:fixed;
+	bottom:190px;
+	right:105px;
+	display:table;
+	visibility: hidden;
+}
+
+.label-container2{
 	position:fixed;
 	bottom:110px;
 	right:105px;
@@ -105,6 +91,18 @@
 	position:fixed;
 	width:60px;
 	height:60px;
+	bottom:180px;
+	right:40px;
+	background-color:#06C;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+	box-shadow: 2px 2px 3px #999;
+}
+.float2{
+	position:fixed;
+	width:60px;
+	height:60px;
 	bottom:100px;
 	right:40px;
 	background-color:#06C;
@@ -125,10 +123,22 @@ a.float + div.label-container {
   transition: visibility 0s, opacity 0.5s ease;
 }
 
+a.float2 + div.label-container2{
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s ease;
+}
+
 a.float:hover + div.label-container{
   visibility: visible;
   opacity: 1;
 }
+
+a.float2:hover + div.label-container2{
+  visibility: visible;
+  opacity: 1;
+}
+
 /* The sidebar menu */
 .sidebar {
   height: 100%; /* 100% Full-height */
