--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,7 +1,9 @@
+/* Made with love by Mutiullah Samim*/
 
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
 html,body{
+/*background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');*/
 background-image: url('../img/seamless.png');
 background-repeat: repeat;
 height: 100%;
@@ -12,6 +14,53 @@ font-family: 'Numans', sans-serif;
 padding-top: 7%;
 height: 100%;
 align-content: center;
+}
+
+.card{
+height: 370px;
+margin-top: auto;
+margin-bottom: auto;
+width: 400px;
+background-color: rgba(0,0,0,0.5) !important;
+}
+
+.card-header h3{
+color: white;
+}
+
+.input-group-prepend span{
+width: 50px;
+background-color: #FFC312;
+color: black;
+border:0 !important;
+}
+
+input:focus{
+outline: 0 0 0 0  !important;
+box-shadow: 0 0 0 0 !important;
+
+}
+
+#noaccount,#signincard,#registerBanner,#forgotloginbanner{
+	/*background-color: #666666;*/
+	background-color: #474747;
+}
+
+#signup, #forgot{
+	/*color:#DBEDFF;*/
+	color:#CCE6FF;
+} 
+
+.remember{
+color: white;
+}
+
+.remember input
+{
+width: 20px;
+height: 20px;
+margin-left: 15px;
+margin-right: 5px;
 }
 
 .login_btn{
@@ -25,3 +74,10 @@ color: black;
 background-color: white;
 }
 
+.links{
+color: white;
+}
+
+.links a{
+margin-left: 4px;
+}
